--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-numeric",
-  "version": "0.0.7,
+  "version": "0.0.7",
   "description": "Predicate that returns true for numeric values.",
   "main": "is-numeric.js",
   "directories": {
